# ConStat

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
code-contamination-detection/: bash.sh
code-contamination-detection/src/: eval.py  run.py
configs/: config_finetune.json
lm-evaluation-harness/: .gitignore  add_flexible_extract.py  compress.py  csv_loader.py  main_benchmark.sh  main_controlled.sh  main_large.sh  main_small.sh
lm-evaluation-harness/lm_eval/models/: __init__.py  huggingface.py  together.py
lm-evaluation-harness/lm_eval/tasks/arc/: arc_normal.yaml  arc_normal_no_cont.yaml  arc_rephrase.yaml  arc_synthetic.yaml
lm-evaluation-harness/lm_eval/tasks/bigbench/: generate_tasks.py
lm-evaluation-harness/lm_eval/tasks/gsm8k/: gsm8k-normal-no-cont.yaml  gsm8k-normal.yaml  gsm8k-rephrase.yaml  gsm8k-synthetic.yaml
notebooks/: extract_results_controlled.ipynb  extract_results_models.ipynb  simulation.ipynb
scripts/: detection.py  detection.sh  evaluate_baselines.py  evaluate_baselines.sh  finetune.py  finetune.sh  finetune_benchmark.sh  generate_rephrase.py  generate_synthetic.py  prepare.py  preprocessing.py  remove_models_huggingface.py  simulation.py  simulation.sh
src/constat/: __init__.py  basic_model_loader.py  detection.py  finetune.py  load_results.py  overlap.py  preprocessing.py  spline_fit.py
tables/: arc_reference.csv  arc_rephrase.csv  arc_synthetic.csv  gsm8k_reference.csv  gsm8k_rephrase.csv  gsm8k_synthetic.csv  hellaswag_reference.csv  hellaswag_rephrase.csv  hellaswag_synthetic.csv  mmlu_rephrase.csv  mmlu_synthetic.csv
(+11 files in other folders)
