[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "constat"
version = "1.0.0"
authors = [
  { name="Jasper Dekoninck", email="jasper.dekoninck@inf.ethz.ch" },
]
description = "Contamination Package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy >= 1.24.3",
  "pandas >= 2.1.4",
  "scipy >= 1.12.0"
]
